@@ -2,6 +2,9 @@
 
 SDIR=`dirname $0` 
 
+# export J2RE_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+# export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+
 if [ -e $SDIR/../../../gluegen/make/scripts/setenv-build-jogamp-x86_64.sh ] ; then
     . $SDIR/../../../gluegen/make/scripts/setenv-build-jogamp-x86_64.sh
 fi
@@ -58,6 +61,5 @@ export JOGAMP_JAR_CODEBASE="Codebase: *.goethel.localnet"
 ant  \
     $CUSTOMLIBDIR \
     -Drootrel.build=build-x86_64 \
-    -Djunit.run.arg0="--illegal-access=warn" \
     $* 2>&1 | tee -a $LOGF
 
