@@ -4,17 +4,12 @@ if [ -e /usr/local/etc/profile.ant ] ; then
     . /usr/local/etc/profile.ant
 fi
 
-# Force OSX SDK 10.6, if desired
-# export SDKROOT=macosx10.6
-
-#JAVA_HOME=`/usr/libexec/java_home`
-JAVA_HOME=`/usr/libexec/java_home -version 11`
-#JAVA_HOME=`/usr/libexec/java_home -version 1.8`
+JAVA_HOME=`/usr/libexec/java_home -version 17`
 PATH=$JAVA_HOME/bin:$PATH
 export JAVA_HOME PATH
 
-
 #    -Dc.compiler.debug=true \
+#    -Dc.compiler.optimise=none \
 #    -Djavacdebug="true" \
 #    -Djavacdebuglevel="source,lines,vars" \
 #
@@ -29,5 +24,4 @@ export JOGAMP_JAR_CODEBASE="Codebase: *.goethel.localnet"
 # BUILD_ARCHIVE=true \
 ant \
     -Drootrel.build=build-macosx \
-    -Djunit.run.arg0="--illegal-access=warn" \
     $* 2>&1 | tee make.jogl.all.macosx.log
